[package]
name = "haar_lib"
version = "0.1.0"
authors = ["Haar"]
edition = "2021"

[dependencies]

[dev-dependencies]
my_testtools = {path = "./my_testtools"}
rand = { version = "=0.8.5" }
test-case = "3.3.1"
pretty_assertions = "1.4.1"

[lints.clippy]
clone_on_ref_ptr = "warn"
unseparated_literal_suffix = "warn"
unneeded_field_pattern = "warn"
self_named_module_files = "warn"
return_and_then = "warn"
rest_pat_in_fully_bound_structs = "warn"
mixed_read_write_in_expression = "warn"
if_then_some_else_none = "warn"
precedence_bits = "warn"
map_with_unused_argument_over_ranges = "warn"

use_self = "warn"

[lints.rust]
missing_docs = "warn"